term/src/snapshots/polyglot__golden__onboarding_welcome.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| o.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   Bienvenido a Polyglot                                      │
        │                                                              │
        │   Vas a aprender japonés desde el español.                   │
        │                                                              │
        │   Controles básicos:                                         │
        │     ↑ ↓      moverte por las opciones                        │
        │     ENTER    confirmar                                       │
        │     ESPACIO  revelar respuesta (en flashcards)               │
        │     ESC      volver al menú                                  │
        │     Q        salir                                           │
        │                                                              │
        │   ENTER  probemos un ejercicio →                             │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
