term/src/snapshots/polyglot__golden__profile_setup_invalid_name.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| s.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   Crea tu perfil                                             │
        │                                                              │
        │   ¿Cómo te llamas?                                           │
        │                                                              │
        │   > 123                                                      │
        │                                                              │
        │   Usa letras, espacios o puntuación de nombre.               │
        │                                                              │
        │   Escribe tu nombre · ENTER crear perfil                     │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
