term/src/snapshots/polyglot__golden__profiles_list.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| p.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   Perfiles                                                   │
        │                                                              │
        │   ▸ Yui  ● actual                                            │
        │     ＋  Crear nuevo perfil                                    │
        │                                                              │
        │   ↑/↓ mover · ENTER elegir · ESC menú                        │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
