term/src/snapshots/polyglot__golden__settings_list_romaji_off.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| s.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   Ajustes                                                    │
        │                                                              │
        │   ▸ Mostrar romaji: No                                       │
        │     Borrar mi perfil                                         │
        │     Borrar todos los datos                                   │
        │                                                              │
        │   ↑/↓ moverse · ENTER cambiar/confirmar · ESC volver         │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
